--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -2,67 +2,185 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:label="@string/input_activity_label"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity" >
 
-    <TextView
-        android:id="@+id/calData"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btSetInput"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="105dp"
-        android:gravity="center"
-        android:padding="10dip"
-        android:textIsSelectable="true" />
-
-    <Button
-        android:id="@+id/btCalendar"
-        style="?android:attr/buttonStyleSmall"
+    <CheckBox
+        android:id="@+id/cb16"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/calData"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@+id/btSync"
-        android:onClick="openCal"
-        android:text="@string/calendar" />
-
-    <Button
-        android:id="@+id/btSync"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/calData"
-        android:layout_marginLeft="20dp"
-        android:layout_toRightOf="@+id/btSetInput"
-        android:onClick="showCalEvents"
-        android:text="@string/sync" />
-
-    <Button
-        android:id="@+id/btSetInput"
-        style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/calData"
+        android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:layout_marginLeft="24dp"
-        android:layout_marginTop="42dp"
-        android:onClick="setInput"
-        android:text="@string/setInput" />
+        android:text="@string/_16_00" />
 
     <CheckBox
-        android:id="@+id/cbShowAll"
+        android:id="@+id/cb17"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btSetInput"
-        android:layout_below="@+id/btSync"
-        android:layout_marginTop="22dp"
-        android:checked="true"
-        android:text="@string/show_all_calendar" />
-   
-       
-    
+        android:layout_alignLeft="@+id/cb16"
+        android:layout_below="@+id/cb16"
+        android:text="@string/_17_00" />
+
+    <CheckBox
+        android:id="@+id/cb18"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/cb17"
+        android:layout_below="@+id/cb17"
+        android:text="@string/_18_00" />
+
+    <CheckBox
+        android:id="@+id/cb19"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/cb18"
+        android:layout_below="@+id/cb18"
+        android:text="@string/_19_00" />
+
+    <CheckBox
+        android:id="@+id/cb20"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/cb19"
+        android:layout_below="@+id/cb19"
+        android:text="@string/_20_00" />
+
+    <CheckBox
+        android:id="@+id/cb21"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/cb20"
+        android:layout_below="@+id/cb20"
+        android:text="@string/_21_00" />
+
+    <CheckBox
+        android:id="@+id/cb22"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/cb21"
+        android:layout_below="@+id/cb21"
+        android:text="@string/_22_00" />
+
+    <AutoCompleteTextView
+        android:id="@+id/tfProp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:completionHint="@string/proposal"
+        android:ems="10"
+        android:inputType="textCapSentences|textMultiLine" />
+
+    <CheckBox
+        android:id="@+id/cbArrive30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cb18"
+        android:layout_alignLeft="@+id/cbLeave15"
+        android:text="@string/arrive30" />
+
+    <CheckBox
+        android:id="@+id/cbArrive15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cbArrive30"
+        android:layout_alignLeft="@+id/cbArrive30"
+        android:text="@string/arrive15" />
+
+    <Button
+        android:id="@+id/btSend"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/tfProp"
+        android:layout_alignBottom="@+id/tfProp"
+        android:layout_alignParentRight="true"
+        android:onClick="createEvent"
+        android:text="@string/send" />
+
+    <CheckBox
+        android:id="@+id/cbLeave15"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cbLeave30"
+        android:layout_alignLeft="@+id/cbLeave30"
+        android:text="@string/leave15" />
+
+    <CheckBox
+        android:id="@+id/cbLeave30"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/line"
+        android:layout_below="@+id/cb21"
+        android:layout_marginRight="30dp"
+        android:text="@string/leave30" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/line"
+        android:layout_below="@+id/line" >
+
+        <RadioButton
+            android:id="@+id/rbJoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:text="@string/join" />
+
+        <RadioButton
+            android:id="@+id/rbCook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cook" />
+
+        <RadioButton
+            android:id="@+id/rbCookJoin"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/cookOrJoin" />
+    </RadioGroup>
+
+    <TextView
+        android:id="@+id/line"
+        style="?android:attr/listSeparatorTextViewStyle"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:layout_alignLeft="@+id/cb22"
+        android:layout_below="@+id/cb22"
+        android:layout_marginTop="8dp"
+        android:gravity="center_horizontal" />
+
+    <CheckBox
+        android:id="@+id/cbPlusOne"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/radioGroup1"
+        android:layout_alignLeft="@+id/radioGroup2"
+        android:text="@string/plusOne" />
+
+    <RadioGroup
+        android:id="@+id/radioGroup2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/cbPlusOne"
+        android:layout_alignLeft="@+id/cbLeave30" >
+
+        <RadioButton
+            android:id="@+id/rbLater"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/later" />
+
+        <RadioButton
+            android:id="@+id/rbNot"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/not_attending" />
+    </RadioGroup>
+
 </RelativeLayout>
